[package]
name = "darkest-vita-savefile"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = {version = "4.4.2", features = ["derive"] }
miniz_oxide = "0.7.1"
nom = "7.1.3"
walkdir = "2.3.3"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"